2003-09-14  John Levon  <levon@movementarian.org>

	* libpp/arrange_profiles.h:
	* libpp/arrange_profiles.cpp: add location of 
	images when inverting profiles

	* libpp/locate_images.cpp: return empty string
	if file isn't readable

	* pp/opannotate.cpp: use the above

	* pp/opreport.cpp: use the above; place warnings
	before any other output

2003-09-14  John Levon  <levon@movementarian.org>

	* pp/opgprof_options.cpp: use locate_image_path

2003-09-14  John Levon  <levon@movementarian.org>

	* Makefile.am:
	* populate.h:
	* populate.cpp: shared code for populating from
	inverted profiles

	* opreport.cpp:
	* opannotate.cpp: use above

2003-09-14  John Levon  <levon@movementarian.org>

	* libpp/arrange_profiles.h:
	* libpp/arrange_profiles.cpp: add invert_profiles

	* pp/opreport.cpp: use it

2003-09-14  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml:
	* pp/opreport.cpp:
	* pp/opreport_options.cpp:
	* pp/opreport_options.h: Turn off VMA report by
	default, add --show-address

2003-09-14  John Levon  <levon@movementarian.org>

	* pp/opreport.cpp: nice formatting of image report
	column headers, respect --no-header

2003-09-14  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/arrange_profiles.cpp: use string::erase() not string::clear()
	  for 2.95

	* libutil++/generic_spec.h: allow to ignore "all" match
	* libutil++/comma_list.h: use it

2003-09-14  John Levon  <levon@movementarian.org>

	* pp/opreport.cpp: output column headers for
	image report

2003-09-14  John Levon  <levon@movementarian.org>

	* libpp/arrange_profiles.cpp:
	* pp/opreport.cpp:

2003-09-14  John Levon  <levon@movementarian.org>

	* libpp/op_header.h:
	* libpp/op_header.cpp: output header info to
	a string not a stream

	* libpp/arrange_profiles.h:
	* libpp/arrange_profiles.cpp: give classes a long
	name, and fill in global event/cpu info

	* pp/opannotate.cpp:
	* pp/opannotate_options.cpp:
	* pp/opannotate_options.h:
	* pp/opgprof_options.cpp:
	* pp/opreport.cpp: